# anima

./: .env.example  .gitignore  .mcp.json  .mcp.json.README.md  .mcp.json.example  CLAUDE.md  CONFIG_WATCHER_DESIGN.md  DEVELOPMENT.md  HEART-PLAN.md  LIBBY-PLAN.md  MEMORYLANE.md  PLAN.md  PWA_PLAN.md  QUICKSTART.md  README.md  RENAME_PLAN.md  TODO.md  anima.example.json  biome.json  claudia.example.json  mcp-config-example.json  memory-lane.sh  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  tsconfig.tsgo.json
.husky/: pre-commit
clients/desktop/src-tauri/: Cargo.toml  tauri.conf.json
clients/desktop/src-tauri/capabilities/: default.json
clients/desktop/src-tauri/icons/: icon.icns
clients/desktop/src-tauri/src/: lib.rs  main.rs
docs/: AGENT-HOST-PLAN.md  AGENT-HOST-SESSION-CODEX-REVIEW.md  API-REFERENCE.md  ARCHITECTURE.md  BRIDGE-PATTERN.md  CLI-RUNTIME-SIGNALS.md  DOMINATRIX.md  EDITOR.md  ENTITLEMENT.md  EXTENSION-SHUTDOWN-QUIESCE-PLAN.md  EXTENSIONS.md  GATEWAY.md  HEALTHCHECKS.md  LOGGING.md  MEMORY.md  MEMORY_SCHEMA.md  PRESENTATION-PERSONAL-AI-AGENTS.md  README.md  SCHEDULER.md  SCRIPTS.md  SECURITY.md  SESSION-PROVIDER-ROUTING-PLAN.md  SESSION.md  SETUP_GUIDE.md  TESTING.md  VOICE-STREAMING.md  WEB-BUNDLER.md  skills.md
hooks/: git-status.ts
prompts/: libby-categorize.md
scripts/: bump-catalog-dependency.ts  check-dependency-drift.ts  claude-config.sh  com.anima.code-server.plist  com.anima.watchdog.plist  e2e-smoke.ts  eleven-tts.js  generate-api-reference.ts  generate-extension-web-contributions.ts  last-wings-session.sh  (+9 more)
(+284 files in other folders)
