[package]
name = "claudia-desktop"
version = "0.1.0"
description = "Claudia desktop app"
authors = ["Michael Carter"]
edition = "2021"

[lib]
name = "claudia_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
